[gd_scene load_steps=10 format=3 uid="uid://bes030ss6u4hd"]

[ext_resource type="Script" path="res://UI/TitleScreen/title_screen.gd" id="1_5f0a5"]
[ext_resource type="PackedScene" uid="uid://di43x1lpcmhc6" path="res://mainspace.tscn" id="2_wdpi2"]
[ext_resource type="Texture2D" uid="uid://bvjxnwg3c1sa3" path="res://Sprites/512x512_purple_nebula_1.png" id="3_fvode"]
[ext_resource type="Theme" uid="uid://drp3uvprkgbbd" path="res://UI/main_menu_theme.tres" id="4_bg5xk"]
[ext_resource type="Texture2D" uid="uid://bxe2mamcjt73x" path="res://Sprites/logo.png" id="4_h7m65"]
[ext_resource type="FontFile" uid="uid://cjg5r33t68mr1" path="res://Fonts/PressStart2P-vaV7.ttf" id="5_2rsbu"]
[ext_resource type="Script" path="res://UI/TitleScreen/global_leaderboard.gd" id="5_6tims"]

[sub_resource type="LabelSettings" id="LabelSettings_7dmnm"]
font = ExtResource("5_2rsbu")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_g5yew"]
font = ExtResource("5_2rsbu")

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_5f0a5")
map_scene = ExtResource("2_wdpi2")

[node name="SpaceBG" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_fvode")
expand_mode = 5

[node name="Home" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Logo" type="TextureRect" parent="Home"]
texture_filter = 1
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -169.0
offset_top = -274.0
offset_right = 169.0
offset_bottom = -105.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_h7m65")

[node name="NameEntry" type="LineEdit" parent="Home"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -26.0
offset_right = 100.5
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_bg5xk")
theme_override_fonts/font = ExtResource("5_2rsbu")
theme_override_font_sizes/font_size = 16
placeholder_text = "Name"
alignment = 1

[node name="PlayButton" type="Button" parent="Home"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = 52.0
offset_right = 83.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_bg5xk")
theme_override_fonts/font = ExtResource("5_2rsbu")
theme_override_font_sizes/font_size = 22
action_mode = 0
text = "Play"

[node name="LBButton" type="Button" parent="Home"]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 135.0
offset_right = 125.0
offset_bottom = 189.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_bg5xk")
theme_override_fonts/font = ExtResource("5_2rsbu")
theme_override_font_sizes/font_size = 22
action_mode = 0
text = " Leaderboard "

[node name="Leaderboard" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_6tims")

[node name="MarginContainer" type="MarginContainer" parent="Leaderboard"]
layout_mode = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 20

[node name="Label" type="Label" parent="Leaderboard/MarginContainer"]
layout_mode = 2
text = "Leaderboard"
label_settings = SubResource("LabelSettings_7dmnm")
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="Leaderboard"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 20

[node name="Loading" type="Control" parent="Leaderboard/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Leaderboard/MarginContainer2/Loading"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -75.0
offset_right = 80.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(52.5, 31.5)
text = "Loading..."
label_settings = SubResource("LabelSettings_g5yew")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Leaderboard/MarginContainer2"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="LeaderboardContainer" type="VBoxContainer" parent="Leaderboard/MarginContainer2/ScrollContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="Leaderboard"]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_bg5xk")
theme_override_fonts/font = ExtResource("5_2rsbu")
theme_override_font_sizes/font_size = 22
action_mode = 0
text = "Back"

[node name="HTTPRequest" type="HTTPRequest" parent="Leaderboard"]

[connection signal="text_changed" from="Home/NameEntry" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="Home/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Home/LBButton" to="." method="_on_lb_button_pressed"]
[connection signal="pressed" from="Leaderboard/BackButton" to="." method="_on_back_button_pressed"]
